# automotive-ecu-samples

./: .gitignore  CMakeLists.txt  README.md  ecu_eval.py  ecu_eval_config.json  ecu_eval_report.html  ecu_eval_report.md
01_log_parser/: CMakeLists.txt  README.md
01_log_parser/include/: log_parser.h
01_log_parser/src/: log_parser.cpp  main.cpp
01_log_parser/test/: test_log_parser.cpp
02_gtest_reporter/: CMakeLists.txt  README.md
02_gtest_reporter/include/: ecu_reporter.h
02_gtest_reporter/src/: ecu_reporter.cpp
02_gtest_reporter/test/: sample_ecu_test.cpp
03_can_parser/: CMakeLists.txt  README.md  sample.can
03_can_parser/include/: can_parser.h
03_can_parser/src/: can_parser.cpp  main.cpp
03_can_parser/test/: test_can_parser.cpp
docs/: README.md  supplement_cpp_basics.md  tutorial_01_log_parser.md  tutorial_02_gtest_reporter.md  tutorial_03_can_parser.md  tutorial_04_ecu_eval_py.md
